# LearnOpenGL-Android

./: README.md  settings.gradle
assimp/: build.gradle
assimp/src/main/: AndroidManifest.xml
assimp/src/main/assets/shader/: model_loading_fragment_shader.glsl  model_loading_vertex_shader.glsl
assimp/src/main/cpp/: CMakeLists.txt  application.cpp  assimp_sample.cpp  assimp_sample.h  mesh.cpp  mesh.h  model.cpp  model.h
assimp/src/main/res/values/: strings.xml
assimp/src/test/java/me/huntto/android_opengles_30/assimp/: ExampleUnitTest.java
common/: Application.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  android_main.cpp  camera.cpp  camera.h  log.h  resource_manager.cpp  resource_manager.h  shader.cpp
cube/: build.gradle
cube/src/main/: AndroidManifest.xml
cube/src/main/assets/: vertex_shader.glsl
cube/src/main/cpp/: CMakeLists.txt  app.cpp  application.h  cube.cpp  cube.h
mixtexture/: build.gradle
mixtexture/src/main/: AndroidManifest.xml
mixtexture/src/main/assets/: vertex_shader.glsl
mixtexture/src/main/cpp/: CMakeLists.txt  MixTexture.cpp  MixTexture.h  android_main.cpp  app.cpp  mix_texture.cpp  mix_texture.h
mixtexture/src/main/res/values/: strings.xml
multilights/: build.gradle
multilights/src/main/: AndroidManifest.xml
multilights/src/main/assets/: object_fragment_shader.glsl
multilights/src/main/cpp/: CMakeLists.txt  application.cpp  application.h  multi_lights.cpp  multi_lights.h
multilights/src/main/res/values/: strings.xml
simplelighting/: build.gradle
simplelighting/src/main/: AndroidManifest.xml
simplelighting/src/main/assets/: light_fragment_shader.glsl  object_fragment_shader.glsl  object_vertex_shader.glsl
simplelighting/src/main/cpp/: CMakeLists.txt  android_main.cpp  app.cpp  application.cpp  simple_lighting.cpp  simple_lighting.h
simplelighting/src/main/res/values/: strings.xml
triangle/: build.gradle
triangle/src/main/: AndroidManifest.xml
triangle/src/main/cpp/: CMakeLists.txt  Triangle.cpp  Triangle.h  application.h  main.cpp  triangle.cpp  triangle.h
